[gd_scene load_steps=7 format=3 uid="uid://dpd5qlq771bi0"]

[ext_resource type="Script" path="res://stages/house_generator.gd" id="1_c4qdo"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="2_d3sog"]
[ext_resource type="PackedScene" uid="uid://by6l1oicxte2p" path="res://assets/house/delivery_house.tscn" id="3_4v6im"]
[ext_resource type="PackedScene" uid="uid://4qalv4kpus8r" path="res://assets/house/RedHouse.tscn" id="4_iwed5"]
[ext_resource type="PackedScene" uid="uid://c73ipjb183jmd" path="res://assets/house/GreenHouse.tscn" id="5_2hhv1"]
[ext_resource type="PackedScene" uid="uid://lb4o667odgcj" path="res://assets/house/BlueHouse.tscn" id="6_qof4b"]

[node name="HouseGenerator" type="Node2D"]
script = ExtResource("1_c4qdo")

[node name="DeliveryHouse" type="Node2D" parent="."]
script = ExtResource("2_d3sog")
scene = ExtResource("3_4v6im")

[node name="RedHouse" type="Node2D" parent="."]
script = ExtResource("2_d3sog")
scene = ExtResource("4_iwed5")

[node name="GreenHouse" type="Node2D" parent="."]
script = ExtResource("2_d3sog")
scene = ExtResource("5_2hhv1")

[node name="BlueHouse" type="Node2D" parent="."]
script = ExtResource("2_d3sog")
scene = ExtResource("6_qof4b")
